# chatPDF

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  config.py  db.py  main.py  migrations.py  pyproject.toml  vector_store.py
backend/models/: tables.py
backend/routers/: chat_ws.py  documents.py  eval.py  libraries.py  models.py  sessions.py
backend/scripts/: eval_retrieval.py  migrate_remove_libraries.py
backend/services/: chat_history.py  eval.py  eval_history.py  eval_runner.py  gold_store.py  ingestion.py  judge.py  llm_gateway.py  model_catalog.py  rag.py  rag_config.py  response_metrics.py  tokens.py  tracing.py
backend/services/plugins/: base.py  chunkers.py  embedders.py  rerankers.py  retrievers.py  sparse.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_ws.py  test_documents_api.py  test_e2e_flow.py  test_eval_api.py  test_hybrid_e2e.py  test_ingestion_config.py  test_libraries_api.py  test_models_and_validation.py  test_sessions_api.py  test_validation_bounds.py
backend/tests/smoke/: ws_test.html
backend/tests/unit/: test_credentials_handling.py  test_eval_history.py  test_eval_metrics.py  test_hybrid_retriever.py  test_ingestion.py  test_judge.py  test_llm_gateway.py  test_migrations.py  test_plugins.py  test_rag.py  test_rag_config.py  test_rag_quality.py  test_relevance_gate.py  test_response_metrics.py  test_semantic_chunker.py  test_token_budget.py  test_tracing.py  test_vector_store.py
design/: figma.md
doc/: e2e_debugging.md  extending.md  improvements.md  rag_enhancements.md  rag_evaluation.md  rag_tuning.md  remove_libraries.md  system_design.md
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: upload-smoke.mjs
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ChatWindow.vue  LibraryPicker.vue  MessageBubble.vue  PDFUploader.vue  SessionSidebar.vue  ToastHost.vue
frontend/src/composables/: useChatSocket.ts  useTheme.ts  (+2 more)
prompt/: prompt_design_doc.txt  system_design.md
scripts/: check_gemini_key.py  test_core.sh  test_ws_chat.py
(+14 files in other folders)
