[project]
name = "backend"
version = "0.1.0"
description = "ChatPDF backend — RAG-powered PDF chat API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.6",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.29",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.27",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + warnings + isort
ignore = ["E501"]                # line length: already enforced by line-length setting

[tool.ruff.lint.isort]
# Pin first-party modules so import grouping is identical regardless of the CWD
# ruff runs from (local backend/ vs CI repo-root) — otherwise auto-detection
# disagrees and flags I001 only in CI.
known-first-party = [
    "config", "db", "main", "migrations", "models",
    "routers", "services", "tests", "vector_store",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::starlette.testclient.StarletteDeprecationWarning",
]
